--- a/index.html
+++ b/index.html
@@ -29,28 +29,28 @@
     <ul class="linkList">
       <li>
         <a href="ikkaisei.html">
-          <img src='file:///C:/Users/yuiyu/OneDrive/%E3%83%87%E3%82%B9%E3%82%AF%E3%83%88%E3%83%83%E3%83%97/%E3%83%9D%E3%83%BC%E3%83%88%E3%83%95%E3%82%A9%E3%83%AA%E3%82%AA%E3%82%B5%E3%82%A4%E3%83%88/images/%E4%B8%80%E5%B9%B4%E7%94%9F.png'
+          <img src='一年生.png'
           <span>一回生</span>
         </a>
       </li>
 
       <li>
         <a href="ikkaisei.html">
-          <img src='file:///C:/Users/yuiyu/OneDrive/%E3%83%87%E3%82%B9%E3%82%AF%E3%83%88%E3%83%83%E3%83%97/%E3%83%9D%E3%83%BC%E3%83%88%E3%83%95%E3%82%A9%E3%83%AA%E3%82%AA%E3%82%B5%E3%82%A4%E3%83%88/images/%E4%BA%8C%E5%B9%B4%E7%94%9F.png'
+          <img src='二年生.png'
           <span>二回生</span>
         </a>
       </li>
 
       <li>
         <a href="ikkaisei.html">
-          <img src='file:///C:/Users/yuiyu/OneDrive/%E3%83%87%E3%82%B9%E3%82%AF%E3%83%88%E3%83%83%E3%83%97/%E3%83%9D%E3%83%BC%E3%83%88%E3%83%95%E3%82%A9%E3%83%AA%E3%82%AA%E3%82%B5%E3%82%A4%E3%83%88/images/%E4%B8%89%E5%B9%B4%E7%94%9F.png'
+          <img src='三年生.png'
           <span>三回生</span>
         </a>
       </li>
 
       <li>
         <a href="ikkaisei.html">
-          <img src='file:///C:/Users/yuiyu/OneDrive/%E3%83%87%E3%82%B9%E3%82%AF%E3%83%88%E3%83%83%E3%83%97/%E3%83%9D%E3%83%BC%E3%83%88%E3%83%95%E3%82%A9%E3%83%AA%E3%82%AA%E3%82%B5%E3%82%A4%E3%83%88/images/%E3%81%8A%E3%81%BE%E3%81%91.png'
+          <img src='おまけ.png'
           <span>おまけ</span>
         </a>
       </li>
