--- a/index.html
+++ b/index.html
@@ -29,28 +29,28 @@
     <ul class="linkList">
       <li>
         <a href="ikkaisei.html">
-          <img src='一年生.png'
+          <img src='images/一年生.png'
           <span>一回生</span>
         </a>
       </li>
 
       <li>
         <a href="ikkaisei.html">
-          <img src='二年生.png'
+          <img src='images/二年生.png'
           <span>二回生</span>
         </a>
       </li>
 
       <li>
         <a href="ikkaisei.html">
-          <img src='三年生.png'
+          <img src='images/三年生.png'
           <span>三回生</span>
         </a>
       </li>
 
       <li>
         <a href="ikkaisei.html">
-          <img src='おまけ.png'
+          <img src='images/おまけ.png'
           <span>おまけ</span>
         </a>
       </li>
