--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="header-left">
         <h1>
-        <img src="images/ポートフォリオロゴ改.png" alt=portfolio>
+        <img src='images/ポートフォリオロゴ改.png' alt=portfolio>
         </h1>
       </div>
       <span class="fa fa-bars menu-icon"></span>
