--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="header-left">
         <h1>
-        <img src='images/ポートフォリオロゴ改.png' alt=portfolio>
+        <img src='images/ポートフォリオロゴ改.png' alt="portfolio">
         </h1>
       </div>
       <span class="fa fa-bars menu-icon"></span>
@@ -29,28 +29,28 @@
     <ul class="linkList">
       <li>
         <a href="ikkaisei.html">
-          <img src='images/一年生.png'
+          <img src='images/一年生.png' alt="">
           <span>一回生</span>
         </a>
       </li>
 
       <li>
         <a href="ikkaisei.html">
-          <img src='images/二年生.png'
+          <img src='images/二年生.png' alt="">
           <span>二回生</span>
         </a>
       </li>
 
       <li>
         <a href="ikkaisei.html">
-          <img src='images/三年生.png'
+          <img src='images/三年生.png' alt="">
           <span>三回生</span>
         </a>
       </li>
 
       <li>
         <a href="ikkaisei.html">
-          <img src='images/おまけ.png'
+          <img src='images/おまけ.png' alt="">
           <span>おまけ</span>
         </a>
       </li>
