--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
       </li>
 
       <li>
-        <a href="ikkaisei.html">
+        <a href="nikaisei.html">
           <img src='images/二年生.png' alt="">
           <span>二回生</span>
         </a>
       </li>
 
       <li>
-        <a href="ikkaisei.html">
+        <a href="sankaisei.html">
           <img src='images/三年生.png' alt="">
           <span>三回生</span>
         </a>
       </li>
 
       <li>
-        <a href="ikkaisei.html">
+        <a href="omake.html">
           <img src='images/おまけ.png' alt="">
           <span>おまけ</span>
         </a>
