--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </li>
 
       <li>
-        <a href="sankaisei.html">
+        <a href="sannkaisei.html">
           <img src='images/三年生.png' alt="">
           <span>三回生</span>
         </a>
