--- a/sannkaisei/sannkaisei.html
+++ b/sannkaisei/sannkaisei.html
@@ -35,14 +35,14 @@
       </li>
 
       <li>
-        <a href="ikkaisei.html">
+        <a href="nikaisei.html">
           <img src='images/二年生.png'
           <span>二回生</span>
         </a>
       </li>
 
       <li>
-        <a href="ikkaisei.html">
+        <a href="sannkaisei.html">
           <img src='images/三年生.png'
           <span>三回生</span>
         </a>
