--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  </body>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <Link rel="stylesheet" href="css/reset.css">
+  <Link rel="preconnect" href="https://fonts.gstatic.com">
+  <Link rel="stylesheet" href="https://fonts.googleaps.com/css2?family=Catamaran">
+  <Link rel="stylesheet" href="css/style.css">
   <title>PORTLABO</title>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  </body>
 </head>
 <body class="topPage">
   <header>
