--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <Link rel="stylesheet" href="css/reset.css">
-  <title>PORTLABO</title>
+  <Link rel="preconnect" href="https://fonts.gstatic.com">
   </body>
+  <title>PORTLABO</title>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body class="topPage">
   <header>
     <div class="container">
       <div class="header-left">
         <h1>
-        <img src='images/ポートフォリオロゴ改.png' alt="portfolio">
+        <img src="images/ポートフォリオロゴ改.png" alt=portfolio>
         </h1>
       </div>
       <span class="fa fa-bars menu-icon"></span>
@@ -27,28 +30,28 @@
     <ul class="linkList">
       <li>
         <a href="ikkaisei.html">
-          <img src='images/一年生.png' alt="">
+          <img src='images/一年生.png'
           <span>一回生</span>
         </a>
       </li>
 
       <li>
-        <a href="nikaisei.html">
-          <img src='images/二年生.png' alt="">
+        <a href="ikkaisei.html">
+          <img src='images/二年生.png'
           <span>二回生</span>
         </a>
       </li>
 
       <li>
-        <a href="sannkaisei.html">
-          <img src='images/三年生.png' alt="">
+        <a href="ikkaisei.html">
+          <img src='images/三年生.png'
           <span>三回生</span>
         </a>
       </li>
 
       <li>
-        <a href="omake.html">
-          <img src='images/おまけ.png' alt="">
+        <a href="ikkaisei.html">
+          <img src='images/おまけ.png'
           <span>おまけ</span>
         </a>
       </li>
