--- a/ikkaisei/index - コピー.html
+++ b/ikkaisei/index - コピー.html
@@ -2,7 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <Link rel="stylesheet" href="css/reset.css">
+  <Link rel="preconnect" href="https://fonts.gstatic.com">
+  </body>
   <title>PORTLABO</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -12,7 +15,7 @@
     <div class="container">
       <div class="header-left">
         <h1>
-          PORTLABO
+        <img src="images/ポートフォリオロゴ改.png" alt=portfolio>
         </h1>
       </div>
       <span class="fa fa-bars menu-icon"></span>
@@ -24,8 +27,34 @@
     </div>
   </header>
   <main>
+    <ul class="linkList">
+      <li>
+        <a href="ikkaisei.html">
+          <img src='images/一年生.png'
+          <span>一回生</span>
+        </a>
+      </li>
 
+      <li>
+        <a href="ikkaisei.html">
+          <img src='images/二年生.png'
+          <span>二回生</span>
+        </a>
+      </li>
 
+      <li>
+        <a href="ikkaisei.html">
+          <img src='images/三年生.png'
+          <span>三回生</span>
+        </a>
+      </li>
+
+      <li>
+        <a href="ikkaisei.html">
+          <img src='images/おまけ.png'
+          <span>おまけ</span>
+        </a>
+      </li>
   <div class="top-wrapper">
     <div class="container">
       <br><br><br><br><br><br>
@@ -54,7 +83,7 @@
       <div class="lessons">
         <div class="lesson">
           <div class="lesson-icon">
-            <img src="file:///C:/Users/yuiyu/OneDrive/%E3%83%87%E3%82%B9%E3%82%AF%E3%83%88%E3%83%83%E3%83%97/%E3%83%9D%E3%83%BC%E3%83%88%E3%83%95%E3%82%A9%E3%83%AA%E3%82%AA%E3%82%B5%E3%82%A4%E3%83%88/images/%E4%B8%80%E5%B9%B4%E7%94%9F.png">
+            <img src="">
 
             <p></p>
           </div>
@@ -62,7 +91,7 @@
         </div>
         <div class="lesson">
           <div class="lesson-icon">
-            <img src="file:///C:/Users/yuiyu/OneDrive/%E3%83%87%E3%82%B9%E3%82%AF%E3%83%88%E3%83%83%E3%83%97/%E3%83%9D%E3%83%BC%E3%83%88%E3%83%95%E3%82%A9%E3%83%AA%E3%82%AA%E3%82%B5%E3%82%A4%E3%83%88/images/%E4%BA%8C%E5%B9%B4%E7%94%9F.png">
+            <img src="">
 
             <p></p>
           </div>
@@ -70,14 +99,14 @@
         </div>
         <div class="lesson">
           <div class="lesson-icon">
-            <img src="file:///C:/Users/yuiyu/OneDrive/%E3%83%87%E3%82%B9%E3%82%AF%E3%83%88%E3%83%83%E3%83%97/%E3%83%9D%E3%83%BC%E3%83%88%E3%83%95%E3%82%A9%E3%83%AA%E3%82%AA%E3%82%B5%E3%82%A4%E3%83%88/images/%E4%B8%89%E5%B9%B4%E7%94%9F.png">
+            <img src="">
             <p></p>
           </div>
           <p class="text-contents">一年・二年生で学んだ事を活かしながら、もっと本格的に魅力ある作品を作っていきたい三年生の今日この頃。</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
-            <img src="file:///C:/Users/yuiyu/OneDrive/%E3%83%87%E3%82%B9%E3%82%AF%E3%83%88%E3%83%83%E3%83%97/%E3%83%9D%E3%83%BC%E3%83%88%E3%83%95%E3%82%A9%E3%83%AA%E3%82%AA%E3%82%B5%E3%82%A4%E3%83%88/images/%E3%81%8A%E3%81%BE%E3%81%91.png">
+            <img src="">
             <p></p>
           </div>
           <p class="text-contents">今まで趣味で描いたり制作した作品を掲載。</p>
@@ -98,7 +127,7 @@
   <footer>
     <div class="container">
       <img src="">
-      <p>こんにちは</p>
+      <p>infomation</p>
     </div>
   </footer>
 </body>
