--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <main>
     <ul class="linkList">
       <li>
-        <a href="indexコピー.html">
+        <a href="ikkaisei/indexコピー.html">
           <img src='images/一年生.png'
           <span>一回生</span>
         </a>
