--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </li>
 
       <li>
-        <a href="ikkaisei.html">
+        <a href="nikaisei/nikaisei.html">
           <img src='images/二年生.png'
           <span>二回生</span>
         </a>
