Update index - コピー.html

--- a/ikkaisei/index - コピー.html
+++ b/ikkaisei/index - コピー.html
@@ -10,7 +10,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
-<body class="subPage">
+<body class="topPage">
   <header>
     <div class="container">
       <div class="header-left">
@@ -29,14 +29,14 @@
   <main>
     <ul class="linkList">
       <li>
-        <a href="ikkaisei.html">
+        <a href="ikkaisei/index - コピー.html">
           <img src='images/一年生.png'
           <span>一回生</span>
         </a>
       </li>
 
       <li>
-        <a href="ikkaisei.html">
+        <a href="nikaisei/nikaisei.html">
           <img src='images/二年生.png'
           <span>二回生</span>
         </a>
