--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <img src="images/ポートフォリオロゴ改.png" alt=portfolio>
         </h1>
       </div>
+                                        
+      <div class="box">
+ 　　　　コンテンツ内容
+　　　</div>
+                      
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
         <a href="#">Home</a>
