--- a/index.html
+++ b/index.html
@@ -12,120 +12,29 @@
   <script src="script.js"></script>
     
 </head>
-<body class="topPage">
+<body>
+  <header>
+		<a href="index.html"><img id="logo" src="images/ポートフォリオロゴ改.png"></a>
+		
+	</header>
   <header>
     <div class="container">
-      <div class="header-left">
-        <h1>
-        <img src="images/ポートフォリオロゴ改.png" alt=portfolio>
-        </h1>
+     <nav id="SiteNavigator">
+        <div id="button">
+        <img src="images/ポートフォリオロゴ改.png" width="30px">
+
       </div>
-      <span class="fa fa-bars menu-icon"></span>
-      <div class="header-right">
-        <a href="#">Home</a>
-        <a href="#">Contact</a>
-        <a href="#" class="login"></a>
-      </div>
-    </div>
-  </header>
-  <main>
-    <ul class="linkList">
-      <li>
-        <a href="ikkaisei/index - コピー.html">
-          <img src='images/一年生.png'
-          <span>一回生</span>
-        </a>
-      </li>
+             <ul id="menu">
+					<li class="hvr-bob"><a href="omake.html"><img src="images/おまけ.png"></a></li>
+					<li class="hvr-bob"><a href="sannkaisei.html"><img src="images/三年生.png"></a></li>
+					<li class="hvr-bob"><a href="nikaisei.html"><img src="images/二年生.png"></a></li>
+				  <li class="hvr-bob"><a href="ikkaisei/index - コピー.html"><img src="images/一年生.png"></a></li>
 
-      <li>
-        <a href="nikaisei/nikaisei.html">
-          <img src='images/二年生.png'
-          <span>二回生</span>
-        </a>
-      </li>
+				</ul>
+</nav>
 
-      <li>
-        <a href="ikkaisei.html">
-          <img src='images/三年生.png'
-          <span>三回生</span>
-        </a>
-      </li>
-
-      <li>
-        <a href="ikkaisei.html">
-          <img src='images/おまけ.png'
-          <span>おまけ</span>
-        </a>
-      </li>
-  <div class="top-wrapper">
-    <div class="container">
-      <br><br><br><br><br><br>
-      <br><br>
-
-      <div class="btn-wrapper">
-
-        <p></p>
-
-
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="lesson-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h2>about<h2>
-        <h3>ここでは、今までに作成してきた作品を学年別に掲載しています。</h3>
-
-        <h2>contents</h2>
-      </div>
-      <div class="lessons">
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="">
-
-            <p></p>
-          </div>
-          <p class="text-contents">コロナ真っ只中に入学し、授業も全て自宅で行った為、先生からの指導も受けられなかったが、それでも自力で学び<br>課題を制作。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="">
-
-            <p></p>
-          </div>
-          <p class="text-contents">コロナ化でありながらも自宅で学べる事を作品に反映することを目標に課題を制作。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="">
-            <p></p>
-          </div>
-          <p class="text-contents">一年・二年生で学んだ事を活かしながら、もっと本格的に魅力ある作品を作っていきたい三年生の今日この頃。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="">
-            <p></p>
-          </div>
-          <p class="text-contents">今まで趣味で描いたり制作した作品を掲載。</p>
-        </div>
-      </div>
-      <div class="clear"></div>
-    </div>
-  </div>
-  <div class="message-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h2>Contact</h2>
-        <h3>何か御用の際は以下のツールでご連絡ください。</h3>
-      </div>
-      <span class="btn message">さっそく開発する</span>
-    </div>
-  </div>
+		<main>
+</main>
   <footer>
     <div class="container">
       <img src="">
