--- a/index.html
+++ b/index.html
@@ -22,6 +22,54 @@
      <nav id="SiteNavigator">
         <div id="button">
         <img src="images/ポートフォリオロゴ改.png" width="30px">
+		
+		
+		
+		
+		
+		<div class="lesson-wrapper">
+    <div class="container">
+      <div class="heading">
+        <h2>about<h2>
+        <h3>ここでは、今までに作成してきた作品を学年別に掲載しています。</h3>
+
+        <h2>contents</h2>
+      </div>
+      <div class="lessons">
+        <div class="lesson">
+          <div class="lesson-icon">
+            <img src="">
+
+            <p></p>
+          </div>
+          <p class="text-contents">コロナ真っ只中に入学し、授業も全て自宅で行った為、先生からの指導も受けられなかったが、それでも自力で学び<br>課題を制作。</p>
+        </div>
+        <div class="lesson">
+          <div class="lesson-icon">
+            <img src="">
+
+            <p></p>
+          </div>
+          <p class="text-contents">コロナ化でありながらも自宅で学べる事を作品に反映することを目標に課題を制作。</p>
+        </div>
+        <div class="lesson">
+          <div class="lesson-icon">
+            <img src="">
+            <p></p>
+          </div>
+          <p class="text-contents">一年・二年生で学んだ事を活かしながら、もっと本格的に魅力ある作品を作っていきたい三年生の今日この頃。</p>
+        </div>
+        <div class="lesson">
+          <div class="lesson-icon">
+            <img src="">
+            <p></p>
+          </div>
+          <p class="text-contents">今まで趣味で描いたり制作した作品を掲載。</p>
+        </div>
+      </div>
+      <div class="clear"></div>
+    </div>
+  </div>
 
       </div>
              <ul id="menu">
