--- a/index.html
+++ b/index.html
@@ -12,22 +12,69 @@
   <script src="script.js"></script>
     
 </head>
-<body>
-  <header>
-		<a href="index.html"><img id="logo" src="images/ポートフォリオロゴ改.png"></a>
-		
-	</header>
+<body class="topPage">
   <header>
     <div class="container">
-     <nav id="SiteNavigator">
-        <div id="button">
-        <img src="images/ポートフォリオロゴ改.png" width="30px">
-		
-		
-		
-		
-		
-		<div class="lesson-wrapper">
+      <div class="header-left">
+        <h1>
+        <img src="images/ポートフォリオロゴ改.png" alt=portfolio>
+        </h1>
+      </div>
+      <span class="fa fa-bars menu-icon"></span>
+      <div class="header-right">
+        <a href="#">Home</a>
+        <a href="#">Contact</a>
+        <a href="#" class="login"></a>
+      </div>
+    </div>
+  </header>
+  <main>
+    <ul class="linkList">
+      <li>
+        <a href="ikkaisei/index - コピー.html">
+          <img src='images/一年生.png'
+          <span>一回生</span>
+        </a>
+      </li>
+
+      <li>
+        <a href="nikaisei/nikaisei.html">
+          <img src='images/二年生.png'
+          <span>二回生</span>
+        </a>
+      </li>
+
+      <li>
+        <a href="ikkaisei.html">
+          <img src='images/三年生.png'
+          <span>三回生</span>
+        </a>
+      </li>
+
+      <li>
+        <a href="ikkaisei.html">
+          <img src='images/おまけ.png'
+          <span>おまけ</span>
+        </a>
+      </li>
+  <div class="top-wrapper">
+    <div class="container">
+      <br><br><br><br><br><br>
+      <br><br>
+
+      <div class="btn-wrapper">
+
+        <p></p>
+
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="lesson-wrapper">
     <div class="container">
       <div class="heading">
         <h2>about<h2>
@@ -70,19 +117,15 @@
       <div class="clear"></div>
     </div>
   </div>
-
+  <div class="message-wrapper">
+    <div class="container">
+      <div class="heading">
+        <h2>Contact</h2>
+        <h3>何か御用の際は以下のツールでご連絡ください。</h3>
       </div>
-             <ul id="menu">
-					<li class="hvr-bob"><a href="omake.html"><img src="images/おまけ.png"></a></li>
-					<li class="hvr-bob"><a href="sannkaisei.html"><img src="images/三年生.png"></a></li>
-					<li class="hvr-bob"><a href="nikaisei.html"><img src="images/二年生.png"></a></li>
-				  <li class="hvr-bob"><a href="ikkaisei/index - コピー.html"><img src="images/一年生.png"></a></li>
-
-				</ul>
-</nav>
-
-		<main>
-</main>
+      <span class="btn message">さっそく開発する</span>
+    </div>
+  </div>
   <footer>
     <div class="container">
       <img src="">
