--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <header>
     <div class="container">
       <div class="header-left">
+        <div id="button">
         <h1>
         <img src="images/ポートフォリオロゴ改.png" alt=portfolio>
         </h1>
