--- a/index.html
+++ b/index.html
@@ -9,25 +9,17 @@
   <title>PORTLABO</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <script src="jquery-3.2.1min.js></script>
   <script src="script.js"></script>
+    
 </head>
 <body class="topPage">
   <header>
     <div class="container">
-     <nav id="SiteNavigator">
-        <div id="button">
-        <img src="images/ポートフォリオロゴ改.png" width="30px">
-
+      <div class="header-left">
+        <h1>
+        <img src="images/ポートフォリオロゴ改.png" alt=portfolio>
+        </h1>
       </div>
-             <ul id="menu">
-					<li class="hvr-bob"><a href="omake.html"><img src="images/おまけ.png"></a></li>
-					<li class="hvr-bob"><a href="sannkaisei.html"><img src="images/三年生.png"></a></li>
-					<li class="hvr-bob"><a href="nikaisei.html"><img src="images/二年生.png"></a></li>
-				  <li class="hvr-bob"><a href="ikkaisei/index - コピー.html"><img src="images/一年生.png"></a></li>
-
-				</ul>
-
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
         <a href="#">Home</a>
