--- a/index.html
+++ b/index.html
@@ -33,28 +33,28 @@
       <li>
         <a href="ikkaisei/index - コピー.html">
           <img src='images/一年生.png'
-          <span>一回生</span>
+          <span></span>
         </a>
       </li>
 
       <li>
         <a href="nikaisei/nikaisei.html">
           <img src='images/二年生.png'
-          <span>二回生</span>
+          <span></span>
         </a>
       </li>
 
       <li>
         <a href="ikkaisei.html">
           <img src='images/三年生.png'
-          <span>三回生</span>
+          <span></span>
         </a>
       </li>
 
       <li>
         <a href="ikkaisei.html">
           <img src='images/おまけ.png'
-          <span>おまけ</span>
+          <span></span>
         </a>
       </li>
   <div class="top-wrapper">
